--- a/main.scss
+++ b/main.scss
@@ -7,7 +7,7 @@
 
 *::selection{
     color: white;
-    background-color: rgb(43, 52, 56);
+    background-color: rgb(0, 104, 148);
 }
 
 body{
@@ -15,17 +15,85 @@ body{
     overflow: hidden;
     margin: 0.3rem;
     width: 100%;
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(37, 37, 37);
     color: rgb(235, 235, 235);
     font-family: 'Noto Serif JP', serif;
 
     .container-main-page{
-        width: 80%;
+        width: 90%;
         max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
+        padding: 0 3rem;
+
+        border-right: 0.1rem solid rgba(158, 158, 158, 0.4);
+        border-left: 0.1rem solid rgba(158, 158, 158, 0.4);
+        box-shadow: 0 0 2rem rgba(158, 158, 158, 0.4);
     }
     .container-main-page::-webkit-scrollbar{
+        display: none;
+    }
+}
+
+body.loading{
+
+    .preloader{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgb(19, 19, 19);
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+        .load-line{
+            width: 8rem;
+            height: 0.5rem;
+            opacity: 0;
+            border-radius: 5rem;
+        }
+
+        .line-1{
+            background-color: rgb(134, 0, 0);
+            animation: load 1s ease infinite 0s;
+        }
+        .line-2{
+            background-color: rgb(0, 89, 148);
+            animation: load 1s ease infinite 0.5s;
+        }
+        .line-3{
+            background-color: rgb(216, 216, 0);
+            animation: load 1s ease infinite 1s;
+        }
+        .line-4{
+            background-color: rgb(0, 128, 75);
+            animation: load 1s ease infinite 1.5s;
+        }
+
+        @keyframes load {
+            0%{
+                transform: rotateZ(0) translate(-100%, 2rem);
+                opacity: 0.2;
+            }
+            50%{
+                transform: rotateZ(180deg) translate(0%, -2rem);
+                opacity: 1;
+            }
+            100%{
+                transform: rotateZ(360deg) translate(100%, 2rem);
+                opacity: 0.2;
+            }
+        }
+    }
+
+}
+
+body.loaded{
+    .preloader{
         display: none;
     }
 }
@@ -156,7 +224,7 @@ header{
             .about{
                 padding: 0.2rem;
                 font-size: 0.7rem;
-                color: grey;
+                color: rgb(86, 148, 167);
                 margin-bottom: 0.3rem;
             }
         }
@@ -168,7 +236,7 @@ header{
                 font-size: 0.7rem;
                 text-align: right;
                 margin: 0.1rem;
-                color: rgb(85, 85, 85);
+                color: rgb(37, 37, 37);
                 .skill-link:hover{
                     cursor: pointer;
                 }
@@ -206,6 +274,11 @@ header{
                     }
                     .content-list{
                         .content-item{
+                            .brief-cont{
+                                .link-input{
+                                    display: none;
+                                }
+                            }
                             .delete-info{
                                 display: none;
                             }
@@ -231,6 +304,13 @@ header{
             .resume-section{
                 .delete-section{
                     display: none;
+                }
+                .resume-skill-wrap{
+                    .skill-block{
+                        .delete-info{
+                            display: none;
+                        }
+                    }
                 }
                 .resume-skills-list{
                     .skill-item{
@@ -287,6 +367,8 @@ header{
                 }
 
                 .resume-section-head{
+                    color: rgba(0, 115, 168, 0.822);
+                    text-shadow: 0 0.05rem 0.05rem black;
                     font-weight: 800;
                     font-size: 1.1rem;
                 }
@@ -387,6 +469,25 @@ header{
                                     font-size: 0.6rem;
                                     padding-left: 0.3rem;
                                 }
+                                
+                                .content-item-link{
+                                    color: rgb(0, 102, 143);
+                                    text-transform: uppercase;
+                                    border-radius: 0.2rem;
+                                    font-size: 0.6rem;
+                                    padding: 0.1rem;
+                                    text-decoration: none;
+                                    font-weight: 900;
+                                    transition: all 0.2s ease;
+                                }
+                                .content-item-link:hover{
+                                    cursor: pointer;
+                                }
+
+                                .link-input{
+                                    margin-left: 0.3rem;
+                                    width: 5rem;
+                                }
                             }
 
                             .content-item-desc-list{
@@ -397,9 +498,10 @@ header{
                                 }
 
                                 .content-item-desc-item{
+                                    padding: 0.1rem;
                                     padding-left: 0.2rem;
                                     position: relative;
-                                    list-style-type: "--";
+                                    list-style-type: none;
 
                                     .content-desc-text{
                                         font-size: 0.6rem;
@@ -426,7 +528,7 @@ header{
                         width: 1.5rem;
                         height: 1.5rem;
                         border: 0.1rem solid black;
-                        background-color: rgb(212, 212, 212);
+                        background-color: rgb(156, 187, 199);
                         text-align: center;
                     }
                     .add-more:hover{
@@ -463,7 +565,6 @@ header{
                 .resume-skills-list{
                     margin: 0.3rem;
                     padding-left: 0.8rem;
-                    list-style-type: none;
 
                     .skill-item{
                         position: relative;
@@ -498,6 +599,35 @@ header{
                         }
                     }
                 }
+
+                .resume-skill-wrap{
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    .skill-block{
+                        display: flex;
+                        font-size: 0.8rem;
+                        background-color: rgb(0, 101, 160);
+                        color: white;
+                        padding: 0.2rem;
+                        margin: 0.1rem;
+                        border-radius: 0.3rem;
+
+                        // .skill-text{
+                        // }
+                        
+                        .delete-info{
+                            color: rgb(192, 192, 192);
+                            margin: 0.15rem;
+                            font-size: 0.8rem;
+                        }
+
+                        .delete-info:hover{
+                            cursor: pointer;
+                        }
+                    }
+                }
+
                 .add-more{
                     font-size: 1rem;
                     border: 0.1rem solid black;
@@ -505,7 +635,7 @@ header{
                     width: 1.5rem;
                     height: 1.5rem;
                     font-weight: 700;
-                    background-color: rgb(209, 209, 209);
+                    background-color: rgb(156, 187, 199);
                     border-radius: 10rem;
                     text-align: center;
                 }
