--- a/main.scss
+++ b/main.scss
@@ -208,7 +208,7 @@ header{
     .resume-head{
         border-bottom: 0.1rem solid grey;
         display: flex;
-        padding-left: 3rem;
+        padding-left: 1rem;
 
         .intro-section{
             width: 70%;
@@ -319,6 +319,17 @@ header{
                             display: none;
                         }
                     }
+                    .skill-smpro{
+                        .smpro-main{
+                            .smpro-head-link{
+                                .smpro-link{
+                                    .link-input{
+                                        display: none;
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
                 .add-more{
                     display: none;
@@ -335,7 +346,7 @@ header{
             width: 66%; 
             border-right: 0.1rem solid grey;
             padding: 0.2rem;
-            padding-left: 3rem;
+            padding-left: 1rem;
 
             .resume-section.dragging{
                 opacity: 0.5;
@@ -434,13 +445,30 @@ header{
                     }
 
                     .content-list{
-                        padding: 0.3rem;
+                        // padding: 0.3rem;
                         display: block;
+
+                        .content-item::before{
+                                position: absolute;
+                                content: '';
+                                top: 0;
+                                left: 0;
+                                width: 0.5rem;
+                                height: 0.5rem;
+                                background-color: rgb(0, 87, 128);
+                                border-radius: 50%;
+                                transform: translate(-150%, 90%);
+                        }
 
                         .content-item{
                             position: relative;
-                            margin: 0.3rem;
-                            border-bottom: 0.1rem solid rgba(160, 160, 160, 0.411);
+                            margin: 0.1rem;
+                            list-style: none;
+                            // border-bottom: 0.1rem solid rgba(160, 160, 160, 0.411);
+
+                            .head-link-section{
+                                display: flex;
+                            }
 
                             .delete-info{
                                 position: absolute;
@@ -459,6 +487,7 @@ header{
 
                             .brief-cont{
                                 display: flex;
+                                margin-left: 0.3rem;
 
                                 .content-item-role{
                                     color: grey;
@@ -476,7 +505,7 @@ header{
                                     color: rgb(0, 102, 143);
                                     text-transform: uppercase;
                                     border-radius: 0.2rem;
-                                    font-size: 0.6rem;
+                                    font-size: 0.9rem;
                                     padding: 0.1rem;
                                     text-decoration: none;
                                     font-weight: 900;
@@ -570,13 +599,24 @@ header{
                     margin: 0.3rem;
                     padding-left: 0.8rem;
 
+                    .skill-item::before{
+                        position: absolute;
+                        content: '';
+                        top: 0;
+                        left: 0;
+                        width: 0.5rem;
+                        height: 0.5rem;
+                        background-color: rgb(0, 87, 128);
+                        border-radius: 50%;
+                        transform: translate(-150%, 90%);
+                    }
+
                     .skill-item{
                         position: relative;
-                        padding: 0.1rem;
-                        border-bottom: 0.1rem solid rgba(158, 158, 158, 0.459);
-                        margin: 0.2rem 0;
-                        display: flex;
-                        flex-wrap: wrap;
+                        list-style: none;
+                        // border-bottom: 0.1rem solid rgba(158, 158, 158, 0.459);
+                        // display: flex;
+                        // flex-wrap: wrap;
 
                         .skill-head{
                             font-weight: 600;
@@ -602,11 +642,54 @@ header{
                             cursor: pointer;
                         }
                     }
+
+                    .skill-smpro{
+                        .smpro-main{
+                            .smpro-head-link{
+                                display: flex;
+
+                                .smpro-head{
+                                    font-size: 0.8rem;
+                                    font-weight: 600;
+                                }
+                                .smpro-link{
+                                    margin-left: 0.3rem;
+
+                                    .content-item-link{
+                                        color: rgb(0, 102, 143);
+                                        text-transform: uppercase;
+                                        border-radius: 0.2rem;
+                                        font-size: 0.9rem;
+                                        text-decoration: none;
+                                        font-weight: 900;
+                                        transition: all 0.2s ease;
+                                        display: block;
+                                    }
+                                    .content-item-link:hover{
+                                        cursor: pointer;
+                                    }
+                                    .link-input{
+                                        width: 4rem;
+                                        display: block;
+                                    }
+                                }
+                            }
+                            .smpro-content{
+                                font-size: 0.7rem;
+                            }
+                        }
+                        .delete-info{
+                            position: absolute;
+                            top: 0;
+                            transform: translateY(50%);
+                        }
+                    }
                 }
 
                 .resume-skill-wrap{
                     display: flex;
                     flex-wrap: wrap;
+                    margin-top: 0.4rem;
 
                     .skill-block{
                         display: flex;
@@ -614,7 +697,7 @@ header{
                         background-color: rgb(0, 101, 160);
                         color: white;
                         padding: 0.2rem;
-                        margin: 0.1rem;
+                        margin: 0.2rem;
                         border-radius: 0.3rem;
 
                         // .skill-text{
